Bug 1606562 - Fixes XInput thumb value ranges. r=jmathies a=pascalc

sThumbXXX in XInput is a short and its value range is between -32768 and 32767.

Differential Revision: https://phabricator.services.mozilla.com/D60876